# VoxelFEM

./: .gitignore  .gitmodules  CMakeLists.txt  FixedSizeDeque.hh  IndexUtils.hh  LICENSE  LagrangePolynomial.hh  LayerByLayer.hh  MethodOfMovingAsymptotes.hh  MultigridSolver.hh  NDVector.hh  OptimalityCriterion.hh  ParallelVectorOps.hh  README.md  TPSStencils.hh  TemplateHelpers.hh  TensorProductBasisPolynomial.hh  TensorProductPolynomialInterpolant.hh  TensorProductQuadrature.cc  TensorProductQuadrature.hh  TensorProductSimulator.hh  TopologyOptimizationConstraint.hh  TopologyOptimizationFilter.hh  TopologyOptimizationObjective.hh  TopologyOptimizationProblem.hh  VoxelFEMBenchmark.hh
examples/bcs/: cantilever_flexion_E.bc  cantilever_flexion_SE.bc  cantilever_traction_E.bc  cantilever_uniform.bc  gripper_arm.bc  hump.bc  hump_upupup.bc  mbb_N.bc  mbb_NW.bc  mbb_mid.bc  mbb_uniform.bc  upsidedown.bc
examples/bcs/3D/: cantilever_flexion_E.bc  cantilever_flexion_NE.bc  cantilever_flexion_SE.bc  cantilever_traction_E.bc  cantilever_uniform.bc  gripper.bc  gripper_arm.bc  hump.bc  mbb_N.bc  mbb_mid.bc  mbb_uniform.bc
examples/densities/: E10nu0.0.msh  E12nu-0.6.msh  E15nu0.7.msh  E3nu0.9.msh  E4nu-0.5.msh
examples/materials/: B9Creator.material
python/: 2DLayerByLayerDemo.ipynb  2DTopoptDemo.ipynb  3DLayerByLayerDemo.ipynb  3DTopoptDemo.ipynb  CoarseningLevelBenchmark.py  LayerByLayerObjective.py  LayerByLayerOptimization.py  density_tools.py  symmetry_utils.py  visualization.py
python/helpers/: bcViewer.py  debug_helpers.py  fpdf_pdf_report.py  history_helpers.py  ipopt_helpers.py  multiscale_helpers.py  visualization.py  visulization.tex  write_benchmark.py
python_bindings/: CMakeLists.txt  Optimizer.cc  VoxelFEM.cc
